# recall

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: demo.yml  release-npm.yml  release.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: GitHubStarBadge.tsx  Hero.tsx  Install.tsx  StarCount.tsx
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: apikey.rs  claude.rs  codex.rs  detect.rs  lib.rs  mock.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: convention.rs  lib.rs  remote.rs  supersede.rs
crates/engram-inject/: Cargo.toml
crates/engram-inject/src/: context.rs  lib.rs
crates/recall-capture/src/: curate.rs  enforce.rs  lib.rs
crates/recall-cli/: Cargo.toml
crates/recall-cli/src/: lib.rs  main.rs
crates/recall-core/src/: convention.rs  remote.rs  supersede.rs
crates/recall-inject/src/: context.rs  lib.rs  scope.rs
crates/recall-mcp/: Cargo.toml
crates/recall-mcp/src/: lib.rs
crates/recall-store/src/: lib.rs
docs/: DEV.md  demo.tape
docs/superpowers/plans/: 2026-06-28-engram-plan5-landing-page.md  2026-06-28-engram-plan6-launch.md  2026-06-28-engram-planFF-enforcement.md  2026-06-28-recall-core-mcp.md  2026-06-28-recall-plan0-monorepo-scaffold.md  2026-06-28-recall-plan2-agent-cli-capture.md  2026-06-28-recall-plan3-plugin-packaging.md  2026-06-28-recall-plan4-release-pipeline.md  2026-06-28-recall-plan5-landing-page.md  2026-06-28-recall-plan6-launch.md  2026-06-28-recall-planFF-enforcement.md
docs/superpowers/specs/: 2026-06-28-engram-monorepo-architecture.md  2026-06-28-recall-convention-brain-design.md  2026-06-28-recall-monorepo-architecture.md
plugins/claude-code/: .mcp.dev.json
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: recall-learn.md
plugins/claude-code/hooks/: hooks.json
plugins/codex/: .mcp.json
plugins/codex/.codex-plugin/: plugin.json
plugins/codex/hooks/: hooks.json
plugins/codex/skills/recall/: SKILL.md
skills/recall/: SKILL.md
