[package]
name = "agent-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Drive Claude Code / Codex (or an API key) as an LLM backend from Rust."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
