[package]
name = "recall-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
recall-core = { path = "../recall-core" }
recall-store = { path = "../recall-store" }
recall-inject = { path = "../recall-inject" }
rmcp = { version = "1.8", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
